--- a/package.json
+++ b/package.json
@@ -6,9 +6,15 @@
 	"author": "walter frog",
 	"license": "ISC",
 	"dependencies": {
+		"@babel/core": "^7.9.0",
+		"@babel/node": "^7.8.7",
+		"@babel/preset-env": "^7.9.5",
 		"express": "^4.17.1"
 	},
 	"scripts": {
-		"start": "node index.js"
+		"start": "nodemon --exec babel-node index.js"
+	},
+	"devDependencies": {
+		"nodemon": "^2.0.2"
 	}
 }
